# wbb

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_hotpath.py
examples/: 03_1_wait_for_selector.py  03_multi_step_automation.py  04_cross_process.py  05_record_to_ffmpeg.py  06_combined_scenario.py  07_display_multiple_sites_with_pool.py  08_clip_display_to_element.py  initial_test.py
test/: 01_1_display_with_filter.py  01_display_with_filter.py  02_monitor_and_react.py  03_multi_step_automation.py  04_cross_process.py  05_record_to_ffmpeg.py  initial_test.py  venv_bin
test/wbb/: __main__.py  _shm.py  browser.py  buffer.py
wbb/: __init__.py  _shm.py  browser.py  buffer.py  display.py  filters.py  frame.py  pool.py
wbb/display/: __init__.py  _window.py  client.py
wbb/display/placement/: __init__.py  _base.py  chain.py  kwin.py  none.py  x11_ewmh.py
