[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbb"
version = "0.1.2"
description = "Render a live website into an off-screen pixel buffer and expose it as a programmable primitive"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Delicious", email = "singularitwenty@proton.me" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
    "Pillow>=10.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
display = ["pygame>=2.5"]
fast-jpeg = ["PyTurboJPEG>=1.7"]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]

[project.scripts]
wbb = "wbb.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wbb*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*", "scipy.*"]
ignore_missing_imports = true
