[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbb"
version = "0.1.4.1"
description = "Render a live website into an off-screen pixel buffer and expose it as a programmable primitive"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Delicious", email = "singularitwenty@proton.me" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
    "Pillow>=10.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# --- Display (the SDL2 window client) -----------------------------------
# Required to use wbb.display.DisplayClient at all. PyTurboJPEG is strongly
# recommended for fast JPEG decode but optional (Pillow is the fallback).
display = ["PySDL2>=0.9.16"]
# display = ["PySDL2>=0.9.16", "pysdl2-dll>=2.28"]

# --- Window placement backends (optional, platform-specific) ------------
# Positioning / always-on-top needs a backend that matches your session.
# Pick the one for your desktop, or use `all` to cover every case.
#
#   KDE Plasma (X11 OR Wayland): KWin D-Bus scripting backend.
#     Needs pydbus + PyGObject. This is the ONLY option on a Wayland
#     session — Wayland has no client-side window positioning protocol.
kde = ["pydbus>=0.6", "PyGObject>=3.50"]
#   Non-KDE X11 desktops (GNOME/X11, XFCE, i3, ...): EWMH backend.
x11 = ["python-xlib>=0.33"]

# --- Convenience umbrellas ----------------------------------------------
# Everything needed to run the SDL display with placement working on the
# common Linux desktops (KDE + generic X11). On a pure Wayland-only box
# the x11 deps are simply unused; harmless to have installed.
all = [
    "PySDL2>=0.9.16",
    # "pysdl2-dll>=2.28",
    "pydbus>=0.6",
    "PyGObject>=3.50",
    "python-xlib>=0.33",
    "PyTurboJPEG>=1.7",
]

# --- Other optionals -----------------------------------------------------
fast-jpeg = ["PyTurboJPEG>=1.7"]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]

# NOTE: gtk4-layer-shell (the old DisplayClient's layer_shell=True /
# corner-pinned Wayland window mode) is a system library with its own
# GObject-introspection typelib, NOT a pip-installable Python package, so
# there is deliberately no extra for it — one would falsely imply pip can
# satisfy it. Install via the system package manager (e.g.
# `sudo dnf install gtk4-layer-shell` on Fedora). The SDL DisplayClient
# does not need it; it uses the placement backends above instead.

[project.scripts]
wbb = "wbb.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wbb*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["gi", "gi.*", "cairo", "scipy.*"]
ignore_missing_imports = true
